MODON MRE BPDEV/force-app/main/default/objects/AI_Service_Config__mdt/AI_Service_Config__mdt.object-meta.xml
<CustomObject>
    <label>AI Service Config</label>
    <pluralLabel>AI Service Configs</pluralLabel>
</CustomObject>