MODON MRE BPDEV/force-app/main/default/objects/AI_Service_Config__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Off by default. Cheque images are captured and stored regardless; this only controls whether they are sent to an external service to be read, which is a data-residency decision rather than a technical one.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>