MODON MRE BPDEV/force-app/main/default/objects/AI_Service_Config__mdt/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <description>Model identifier appended to the named credential host, e.g. gemini-3.1-flash-lite-preview. Config rather than code so the model can be moved on without a deploy.</description>
    <label>Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>