MODON MRE BPDEV/force-app/main/default/objects/AI_Service_Config__mdt/fields/Timeout_Ms__c.field-meta.xml
<CustomField>
    <fullName>Timeout_Ms__c</fullName>
    <description>Callout timeout in milliseconds. Blank uses 120000, matching the timeout the existing Signzy and Gemini callouts in this org already set.</description>
    <label>Timeout (ms)</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>